--- a/welfare-pi.html
+++ b/welfare-pi.html
@@ -748,20 +748,20 @@
                 </li>
                 <li class="nav-item mx-4"><a class="nav-link" id="aihunt" href="https://aihunt.one">🤖 AI 工具</a></li>
                 <li class="nav-item mx-4"><a class="nav-link new-tag animate__animated animate__pulse animate__infinite" id="usesora" href="https://usesora.io" title="使用 Sora 生成 AI 视频，以及发现 Sora 生成的精彩视频">👉UseSora👈</a></li>
-                <li class="nav-item mx-4"><a class="nav-link" id="donate" href="donate.html">💰 捐赠</a></li>
                 <li class="nav-item dropdown mx-4">
-                    <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">🔽 更多</a>
-                    <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
+                  <a id="drop-more" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false">🔽 更多</a>
+                  <div id="menu5" class="dropdown-menu" role="menu" aria-labelledby="drop-more">
+                      <a class="dropdown-item" id="donate" href="donate.html">🍗 捐赠</a>
                       <a class="dropdown-item" href="welfare-pi.html" id="welfare">🎁 福利𝝅</a>
                       <a class="dropdown-item" href="friends.html" id="friends">🧑‍🤝‍🧑 好朋友们</a>
-                      <a class="dropdown-item" href="https://github.com/inferjay/AndroidDevTools"
-                        data-title="View GitHub Project"><img width="18px"
-                          src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" />&nbsp;&nbsp;GitHub</a>
                       <a class="dropdown-item"
                         href="https://github.com/inferjay/AndroidDevTools/issues/54?utm_source=androiddevtools&utm_medium=website"
                         id="feedback">🙋 问题反馈</a>
+                      <a class="dropdown-item" href="https://github.com/inferjay/AndroidDevTools"
+                        data-title="View GitHub Project"><img width="18px"
+                          src="https://github.githubassets.com/favicons/favicon.svg" alt="GitHub" />&nbsp;&nbsp;GitHub</a>
                     </div>
-                </li>
+              </li>
                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
               </ul>
             </div>
@@ -816,6 +816,9 @@ var discounts = [{"title":"满199减54 满减券","money":54,"url":"http://gk.li
         </div>
     </section>
     <div class="zh-backtotop">
+        <a data-tip="捐赠" alt="捐赠" class="btn-action btn-donate" href="donate.html">
+            <img class="icon-donate" alt="捐赠图标" src="static/image/jitui.webp">
+        </a>
         <a data-action="backtotop" data-tip="回到顶部" alt="回到顶部" class="btn-backtotop btn-action" href="#body">
             <img class="arrow" alt="回到顶部图标" src="static/image/backtotop_arrow.png">
         </a>
