--- a/donate.html
+++ b/donate.html
@@ -31,7 +31,7 @@
     </script>
 </head>
 
-<body data-target=".content-nav">
+<body data-target=".content-nav" id="body">
     <header class="row align-items-center">
         <nav class="navbar navbar-expand-lg navbar-light mx-lg-auto">
             <a class="navbar-brand mr-lg-4" href="index.html" alt="首页">
@@ -2414,7 +2414,7 @@
         <a data-tip="捐赠" alt="捐赠" class="btn-action btn-donate" href="donate.html">
             <img class="icon-donate" alt="捐赠图标" src="static/image/jitui.webp">
         </a>
-        <a data-action="backtotop" data-tip="回到顶部" alt="回到顶部" class="btn-backtotop btn-action" href="#donate-desc">
+        <a data-action="backtotop" data-tip="回到顶部" alt="回到顶部" class="btn-backtotop btn-action" href="#body">
             <img class="arrow" alt="回到顶部图标" src="static/image/backtotop_arrow.png">
         </a>
     </div>
